syntax = "proto3";

package io.opencola.model.protobuf;

import "google/protobuf/timestamp.proto";
import "util.proto";
import "security.proto";

message Attribute {
  enum CoreAttribute {
    NONE = 0;
    TYPE = 1;
    MIME_TYPE = 2;
    URI = 3;
    DATA_ID = 4;
    PUBLIC_KEY = 5;
    NAME = 6;
    DESCRIPTION = 7;
    TEXT = 8;
    IMAGE_URI = 9;
    TAG = 10;
    TRUST = 11;
    LIKE = 12;
    RATING = 13;
    PARENT_ID = 14;
    COMMENT_ID = 15;
    NETWORK_TOKEN = 16;
    ATTACHMENT_ID = 17;
  }
  oneof value {
    CoreAttribute coreAttribute = 1;
    string uri = 2;
  }
}

message Value {
  enum OCType {
    NONE = 0;
    EMPTY = 1;
    BOOLEAN = 2;
    INT = 3;
    LONG = 4;
    FLOAT = 5;
    DOUBLE = 6;
    STRING = 7;
    BYTES = 8;
    URI = 9;
    ID = 10;
    PUBLIC_KEY = 11;
  }
  OCType ocType = 1;
  oneof value {
    bytes empty = 2;
    bool boolean = 3;
    int32 int = 4;
    int64 long = 5;
    float float = 6;
    double double = 7;
    string string = 8;
    bytes bytes = 9;
    string uri = 10;
    Id id = 11;
    io.opencola.security.protobuf.PublicKey publicKey = 12;
  }
}

enum Operation {
  NONE = 0;
  RETRACT = 1;
  ADD = 2;
}

message TransactionFact {
  Attribute attribute = 1;
  Value value = 2;
  Operation operation = 3;
}

message Id {
  bytes bytes = 1;
}

message TransactionEntity {
  Id entityId = 1;
  repeated TransactionFact facts = 2;
}

message Transaction {
  Id id = 1;
  Id authorityId = 2;
  repeated TransactionEntity transactionEntities = 3;
  google.protobuf.Timestamp timestamp = 4;
}

message SignedTransaction {
  /*
  From https://protobuf.dev/overview/:

  * When protocol buffers are serialized, the same data can have many different binary serializations.
  You cannot compare two messages for equality without fully parsing them.

  In order for a signature to validated, then, the exact bytes of the serialized transaction must be preserved, which
  is why we use a bytes type here, rather than a Transaction message.
   */
  io.opencola.util.protobuf.CompressedBytes compressedTransaction = 1;
  io.opencola.security.protobuf.Signature signature = 2;
}